@@ -1,3 +1,4 @@
+ - Improved adaptive mesh refinement producing better quality meshes
 0.9.0 [2009-01-05]
  - Cross-platform fixes
  - PETScMatrix::copy fix
